Refactor server and client